--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,6 @@
-html {
-  font-family: Roboto, sans-serif;
-}
+@import "utilites/reset";
+@import "utilites/normalize";
+@import "utilites/variables";
 
-body {
-  margin: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@import "_header.scss";
-@import "_catalog.scss";
+@import "blocks/header.scss";
+@import "blocks/catalog.scss";
